Fix RU translation for email settings
Some strings were not correctly translated.

--- a/modules/setting-management/src/Volo.Abp.SettingManagement.Domain.Shared/Volo/Abp/SettingManagement/Localization/Resources/AbpSettingManagement/ru.json
+++ b/modules/setting-management/src/Volo.Abp.SettingManagement.Domain.Shared/Volo/Abp/SettingManagement/Localization/Resources/AbpSettingManagement/ru.json
@@ -9,26 +9,26 @@
     "Permission:TimeZone": "Часовой пояс",
     "SendTestEmail": "Отправить тестовое письмо",
     "SenderEmailAddress": "Адрес электронной почты отправителя",
-    "TargetEmailAddress": "Целевой адрес электронной почты",
-    "Subject": "Предмет",
-    "Body": "Тело",
+    "TargetEmailAddress": "Адрес электронной почты получателя",
+    "Subject": "Тема",
+    "Body": "Сообщение",
     "TestEmailSubject": "Тестовое письмо {0}",
     "TestEmailBody": "Проверьте текст сообщения электронной почты здесь",
     "SuccessfullySent": "Успешно отправлено",
-    "Send": "Отправлять",
+    "Send": "Отправить",
     "Menu:Emailing": "Отправка по электронной почте",
     "Menu:TimeZone": "Часовой пояс",
     "DisplayName:Timezone": "Часовой пояс",
     "TimezoneHelpText": "Этот параметр используется для всего приложения или на уровне клиента.",
-    "SmtpHost": "Хозяин",
+    "SmtpHost": "Сервер",
     "SmtpPort": "Порт",
     "SmtpUserName": "Имя пользователя",
     "SmtpPassword": "Пароль",
     "SmtpDomain": "Домен",
     "SmtpEnableSsl": "Включить ssl",
     "SmtpUseDefaultCredentials": "Использовать учетные данные по умолчанию",
-    "DefaultFromAddress": "По умолчанию с адреса",
-    "DefaultFromDisplayName": "По умолчанию из отображаемого имени",
+    "DefaultFromAddress": "Адреса отправители",
+    "DefaultFromDisplayName": "Отображаемое имя отправителя",
     "Feature:SettingManagementGroup": "Управление настройками",
     "Feature:SettingManagementEnable": "Включить управление настройками",
     "Feature:SettingManagementEnableDescription": "Включите систему управления настройками в приложении.",
